[package]
name = "cloudflare-lib"
version = "0.0.1"
edition = "2021"
authors = ["PeiYu Cui <i@cuipeiyu.com>"]
license = "MIT OR Apache-2.0"
include = ["/Cargo.toml", "/src", "/README.md", "/LICENSE-*"]
description = "A cloudflare lib for rust"
homepage = "https://github.com/cuipeiyu/cloudflare-lib"
repository = "https://github.com/cuipeiyu/cloudflare-lib"
documentation = "https://docs.rs/cloudflare-lib"
categories = ["api-bindings"]
keywords = ["cloudflare", "api", "client", "library", "bindings"]
readme = "README.md"

[dependencies]
anyhow = "1"
tracing = "0.1"
bytes = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "query"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3" }

[[test]]
name = "kv"
path = "tests/kv.rs"
required-features = ["with-kv"]

[lib]
name = "cloudflare_lib"
path = "src/lib.rs"

[features]
full = [
  "with-kv",
]
with-kv = []
